Changelog

0.9.0 - 2nd February 2020
=========================

New

* self$db$Practice provides access to dbo.PRACTICE
* subscription changes
*  self$subscription_db provides access to subscription servers (when open)
*  self$read_subscription_db to read subscription information
*  self$check_subscription to check subscription and date range

Changes

* private$.UserRestrictions does not collect() (delayed evaluation)
* private$.UserConfig does not collect() (delayed evaluation)
*  private$.UserConfig also does not 'unroll' Locations/Attributes
* private$.identified_user changed to active (self$.identified_user)
*  adopts functionality of match_user function

0.8.2 - 24th December 2019
==========================

New

* list_measlesVax (measles vaccine eligibility)

* add self$vaccine_choices - list of available vaccine lists

* add postnatal_list

Bugfix

* default 'chosen' in list_dataQuality corrected

* correction in pregnant_list, allow is.na(ENDDATE) for current pregnancy
  improved date logic


0.8.1 - 18th December 2019
==========================

New

* list_familyHx (data quality method)

* db$familyhistory and db$familyhistorydetail : access to family history
  also db$relationcode - but this is not actually used at this time

Bugfix

* convert ResultValue and BPcode to numeric in db$ReportValues

  also remove prceding "<" and ">" from ResultValue to allow numerical comparison
  against "<" and ">" values.

  these features require a modified version of dbplyr
  * 'as.double' CASTs to DOUBLE, instead of NUMERIC (the latter casts to integers)
  * use TRY_CAST (a T-SQL/Microsoft SQL specific feature) instead of CAST, to
    allow graceful failure to NA instead of errors.


0.8.0 - 12th November 2019
==========================

New

* dataQuality module - list_dataQuality. currently includes list_allergy

  Data quality assessment. Are allergies recorded for the listed patients?

  social history (partial) - list_socialHx
