@@ -14,6 +14,7 @@ export(LVH_list)
 export(PersistentProteinuria_obs)
 export(UrineAlbumin_obs)
 export(UserConfig)
+export(UserConfigLicense)
 export(WriteLog)
 export(add_age)
 export(asplenia_list)
