@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/dMeasure.R
-\name{UserConfig}
-\alias{UserConfig}
-\title{show user configurations}
+\name{UserConfigLicense}
+\alias{UserConfigLicense}
+\title{show user configurations with license}
 \usage{
-UserConfig(dMeasure_obj)
+UserConfigLicense(dMeasure_obj)
 }
 \arguments{
 \item{dMeasure_obj}{dMeasure R6 object}
@@ -20,13 +20,15 @@ dataframe of user configuration descriptions
  Attributes - vector of user's attributes/permissions
  License - undecoded license
  LicenseCheckDate
+ Identifier - identifier used to interrogate subscription database
+ LicenseDate - date of license
 }
 \description{
-show user configurations
+show user configurations with license
 }
 \examples{
 dMeasure_obj <- dMeasure$new()
 dMeasure_obj$open_configuration_db()
 dMeasure_obj$read_configuration_db()
-dMeasure_obj$UserConfig
+dMeasure_obj$UserConfigLicense
 }
