@@ -10,12 +10,14 @@ New
 *  self$subscription_db provides access to subscription servers (when open)
 *  self$read_subscription_db to read subscription information
 *  self$check_subscription to check subscription and date range
+*  self$UserConfigLicense and $UserConfigLicenseR - similar to $UserConfig, includes $LicenseDate and $Identifier
 
 Changes
 
 * private$.UserRestrictions does not collect() (delayed evaluation)
 * private$.UserConfig does not collect() (delayed evaluation)
 *  private$.UserConfig also does not 'unroll' Locations/Attributes
+* $UserConfig includes License, LicenseCheckDate
 * private$.identified_user changed to active (self$.identified_user)
 *  adopts functionality of match_user function
 
